# sql_vs_pandas

./: driver.sh  pyproject.toml
analysis/: Analysis.ipynb
driver/: driver.py  pandas_driver.py  sqlite_driver.py  sqlite_load.sh
