[tool.poetry]
name = "sql-vs-pandas"
version = "0.1.0"
description = ""
authors = ["Lewis Cowles <lewis+github@cowles.uk>"]
readme = "README.md"
packages = [{include = "sql_vs_pandas"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "2.1.1"
contexttimer = "^0.3.3"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
simplejson = "^3.19.2"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
